--- a/bio.html
+++ b/bio.html
@@ -1,4 +1,26 @@
-<!-- 
+<!--
     Requirements:
     A short biography of yourself. This can be real or fictitious (e.g., for FERPA reasons).
  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/bio.css" />
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
+        <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+      </ul>
+    </nav>
+    <p>Thomas Zhang</p>
+    <img src="./assets/profile.jpg" alt="The profile picture of Thomas Zhang" />
+  </body>
+</html>
