--- a/bio.html
+++ b/bio.html
@@ -22,5 +22,8 @@
     </nav>
     <p>Thomas Zhang</p>
     <img src="./assets/profile.jpg" alt="The profile picture of Thomas Zhang" />
+    <div id="building-1">
+      <div class="side"></div>
+    </div>
   </body>
 </html>
