--- a/bio.html
+++ b/bio.html
@@ -1,6 +1,7 @@
 <!--
     Requirements:
-    A short biography of yourself. This can be real or fictitious (e.g., for FERPA reasons).
+    A short biography of yourself.
+    This can be real or fictitious (e.g., for FERPA reasons).
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -15,15 +16,45 @@
   <body>
     <nav>
       <ul>
-        <li class="nav-link__home"><a href="/index.html">Home</a></li>
+        <li class="nav-link__home"><a href="/index.html">About Me</a></li>
         <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
         <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
       </ul>
     </nav>
-    <p>Thomas Zhang</p>
-    <img src="./assets/profile.jpg" alt="The profile picture of Thomas Zhang" />
-    <div id="building-1">
-      <div class="side"></div>
-    </div>
+    <main>
+      <p>Thomas Zhang</p>
+
+      <div class="bio">
+        <p>Your name</p>
+        <p>Your current job title</p>
+        <p>Your company name or personal brand statement</p>
+        <p>Your hometown</p>
+        <p>Your alma mater</p>
+        <p>Your personal and professional goals</p>
+        <p>A relevant achievement or accomplishment</p>
+        <p>Your hobbies</p>
+        <p>Your skills and areas of expertise</p>
+      </div>
+
+      <ul class="cloud" role="navigation" aria-label="Word Cloud">
+        <li data-weight="7">Adventurer</li>
+        <li data-weight="9">Gamer</li>
+        <li data-weight="4">Chef</li>
+        <li data-weight="3">Digital Nomad</li>
+        <li data-weight="7">Traveler</li>
+        <li data-weight="7">Technologist</li>
+        <li data-weight="8">Hacker</li>
+        <li data-weight="5">Photographer</li>
+        <li data-weight="5">Architect</li>
+        <li data-weight="6">Person-of-Disability</li>
+        <li data-weight="9">Conservationist</li>
+        <li data-weight="9">Investor</li>
+        <li data-weight="3">Futurist</li>
+        <li data-weight="3">Foodie</li>
+        <li data-weight="6">Student</li>
+        <li data-weight="3">Developer</li>
+        <li data-weight="3">Designer</li>
+      </ul>
+    </main>
   </body>
 </html>
