--- a/bio.html
+++ b/bio.html
@@ -25,6 +25,17 @@
       <p>Thomas Zhang</p>
 
       <div class="bio">
+        <h2>👋Hello, I'm Thomas Zhang</h2>
+        <p>
+          Ever since dropping out of middle school at 13 years old, I spent my teens
+          doing business.
+          Spent my most twenties on traveling. All 50 states.
+          Goal: Help small businesses. Help people in need realize their dreams.
+          My favorite animal is sea otter (2rd: meerkat, 3rd: alpha). Want to
+          connect the dots. Want to be an architect. Start-up in construction
+          tech and building technology.
+        </p>
+
         <p>Your name</p>
         <p>Your current job title</p>
         <p>Your company name or personal brand statement</p>
