fix: bio.html passed html validator

--- a/bio.html
+++ b/bio.html
@@ -27,13 +27,12 @@
       <div class="bio">
         <h2>👋Hello, I'm Thomas Zhang</h2>
         <p>
-          Ever since dropping out of middle school at 13 years old, I spent my teens
-          doing business.
-          Spent my most twenties on traveling. All 50 states.
-          Goal: Help small businesses. Help people in need realize their dreams.
-          My favorite animal is sea otter (2rd: meerkat, 3rd: alpha). Want to
-          connect the dots. Want to be an architect. Start-up in construction
-          tech and building technology.
+          Ever since dropping out of middle school at 13 years old, I spent my
+          teens doing business. Spent my most twenties on traveling. All 50
+          states. Goal: Help small businesses. Help people in need realize their
+          dreams. My favorite animal is sea otter (2rd: meerkat, 3rd: alpha).
+          Want to connect the dots. Want to be an architect. Start-up in
+          construction tech and building technology.
         </p>
 
         <p>Your name</p>
@@ -47,7 +46,7 @@
         <p>Your skills and areas of expertise</p>
       </div>
 
-      <ul class="cloud" role="navigation" aria-label="Word Cloud">
+      <ul class="cloud" aria-label="Word Cloud">
         <li data-weight="7">Adventurer</li>
         <li data-weight="9">Gamer</li>
         <li data-weight="4">Chef</li>
