--- a/bio.html
+++ b/bio.html
@@ -22,49 +22,166 @@
       </ul>
     </nav>
     <main>
-      <p>Thomas Zhang</p>
-
       <div class="bio">
-        <h2>👋Hello, I'm Thomas Zhang</h2>
-        <p>
-          Ever since dropping out of middle school at 13 years old, I spent my
-          teens doing business. Spent my most twenties on traveling. All 50
-          states. Goal: Help small businesses. Help people in need realize their
-          dreams. My favorite animal is sea otter (2rd: meerkat, 3rd: alpha).
-          Want to connect the dots. Want to be an architect. Start-up in
-          construction tech and building technology.
-        </p>
+        <h2 class="bio__title">👋Hello, I'm Thomas Zhang</h2>
+        <img
+          class="bio__profile"
+          src="./assets/profile.jpg"
+          alt="profile picture"
+        />
 
-        <p>Your name</p>
-        <p>Your current job title</p>
-        <p>Your company name or personal brand statement</p>
-        <p>Your hometown</p>
-        <p>Your alma mater</p>
-        <p>Your personal and professional goals</p>
-        <p>A relevant achievement or accomplishment</p>
-        <p>Your hobbies</p>
-        <p>Your skills and areas of expertise</p>
+        <ul class="cloud bio__titles" aria-label="Word Cloud">
+          <li data-weight="7">Adventurer</li>
+          <li data-weight="9">Gamer</li>
+          <li data-weight="4">Chef</li>
+          <li data-weight="3">Digital Nomad</li>
+          <li data-weight="7">Traveler</li>
+          <li data-weight="7">Technologist</li>
+          <li data-weight="8">Hacker</li>
+          <li data-weight="5">Photographer</li>
+          <li data-weight="5">Architect</li>
+          <li data-weight="6">Person-of-Disability</li>
+          <li data-weight="9">Conservationist</li>
+          <li data-weight="9">Investor</li>
+          <li data-weight="3">Futurist</li>
+          <li data-weight="3">Foodie</li>
+          <li data-weight="6">Student</li>
+          <li data-weight="3">Developer</li>
+          <li data-weight="3">Designer</li>
+        </ul>
+
+        <div class="bio__tabs">
+          <!-- tab 1 - English -->
+          <input
+            class="bio__radio-tab"
+            name="tabs"
+            tabindex="1"
+            type="radio"
+            id="tab-one"
+            checked="checked"
+          />
+          <label class="bio__label" for="tab-one">English</label>
+          <div class="bio__panel" tabindex="1">
+            <p>
+              A highly accomplished entrepreneur and technologist who has blazed
+              his own trail in life, Thomas dropped out of middle school at the
+              age of 13 to pursue his entrepreneurial dreams, and spent his
+              teenage years building and running businesses. In his 20s, Thomas
+              shifted his focus to traveling, visiting all 50 states and
+              countless destinations around the world and gaining a deep
+              appreciation for different cultures and ways of life.
+            </p>
+            <p>
+              Despite his unconventional educational background, he has achieved
+              remarkable success in the tech industry, leveraging his keen
+              business acumen and extensive knowledge of cutting-edge
+              technologies to found and lead multiple successful startups. When
+              he's not working, Thomas enjoys indulging his love of adventure
+              and exploration, whether it's camping in the great outdoors,
+              snorkeling in tropical waters, or seeking out the spiciest cuisine
+              he can find. He is also deeply committed to helping small
+              businesses grow and thrive, using his expertise and network to
+              support entrepreneurs in achieving their dreams.
+            </p>
+          </div>
+
+          <!-- tab 2 - Spanish -->
+          <input
+            class="bio__radio-tab"
+            tabindex="1"
+            name="tabs"
+            type="radio"
+            id="tab-two"
+          />
+          <label class="bio__label" for="tab-two">Español</label>
+          <div class="bio__panel" tabindex="1">
+            <p>
+              Thomas Zhang es un emprendedor y tecnólogo muy exitoso con una
+              pasión por la innovación y el crecimiento. Con años de experiencia
+              en la industria tecnológica, ha fundado y dirigido con éxito
+              múltiples startups, utilizando su experiencia en tecnología de
+              vanguardia para crear soluciones impactantes que resuelven
+              problemas complejos. En su tiempo libre, a Thomas le gusta viajar,
+              acampar, hacer snorkel, jugar videojuegos y explorar diferentes
+              tipos de cocina, especialmente la comida picante. Es un ávido
+              entusiasta de la naturaleza y ha visitado los 50 estados, buscando
+              paisajes impresionantes y arquitectura contemporánea. Thomas
+              también está comprometido en apoyar a las pequeñas empresas,
+              aprovechando su experiencia y su red para ayudarles a prosperar y
+              alcanzar su máximo potencial.
+            </p>
+            <p>
+              Además, en su adolescencia, Thomas abandonó la escuela intermedia
+              a los 13 años para perseguir sus sueños empresariales y pasó sus
+              años de adolescencia construyendo y dirigiendo negocios. En sus 20
+              años, Thomas cambió su enfoque hacia viajar, visitando numerosos
+              destinos en todo el mundo y adquiriendo una profunda apreciación
+              por las diferentes culturas y formas de vida. A pesar de su poco
+              convencional formación educativa, ha logrado un éxito notable en
+              la industria tecnológica, aprovechando su agudo sentido de los
+              negocios y su extenso conocimiento de las tecnologías de
+              vanguardia para fundar y liderar múltiples startups exitosas.
+              Cuando no está trabajando, Thomas disfruta de su amor por la
+              aventura y la exploración, ya sea acampando al aire libre,
+              haciendo snorkel en aguas tropicales o buscando la cocina más
+              picante que pueda encontrar.
+            </p>
+          </div>
+
+          <!-- tab 3 -->
+          <input
+            class="bio__radio-tab"
+            tabindex="1"
+            name="tabs"
+            type="radio"
+            id="tab-three"
+          />
+          <label class="bio__label" for="tab-three">日本語</label>
+          <div class="bio__panel" tabindex="1">
+            <p>
+              トーマス・チャンは、革新と成長に情熱を持つ、高度に実績のある起業家であり技術者です。技術産業での長年の経験を持ち、先進技術の知識を活かして複数のスタートアップを創業し、成功裏に指導してきました。趣味は旅行、キャンプ、シュノーケリング、ビデオゲーム、辛い料理を食べることなど。彼は自然愛好家であり、50州すべてを訪れ、息をのむような景色や現代建築を求めています。また、中学校を13歳で中退し、ティーンエージャーの頃からビジネスを築いていました。20代には旅行に重点を置き、世界中の多くの目的地を訪れ、さまざまな文化やライフスタイルに深い理解を持ちました。彼は小規模ビジネスの成長を支援することにも熱心であり、彼の専門知識とネットワークを活用して、起業家たちが夢を実現するための支援をしています。
+            </p>
+          </div>
+
+          <!-- tab 4 -->
+          <input
+            class="bio__radio-tab"
+            tabindex="1"
+            name="tabs"
+            type="radio"
+            id="tab-four"
+          />
+          <label class="bio__label" for="tab-four">简体中文</label>
+          <div class="bio__panel" tabindex="1">
+            <p>
+              Thomas Zhang
+              是一位充满创业精神和技术热情的成功企业家和技术专家。在科技行业有多年经验，创办并成功领导了多家初创公司，利用其对尖端技术的了解，创造出解决复杂问题的有力解决方案。在业余时间，Thomas
+              喜欢旅行、露营、浮潜、玩视频游戏和品尝辛辣食品。他是一位热爱大自然的爱好者，已经游历了50个州，寻找惊人的景色和当代建筑。此外，Thomas
+              在13岁中途退学追求创业梦想，在青少年时期建立和运营了多家企业。20多岁时，他将重点转向旅行，访问了世界各地的无数目的地，深刻体会了不同文化和生活方式。尽管教育背景不同寻常，但他在科技行业取得了卓越的成功，利用他敏锐的商业头脑和广泛的先进技术知识创办和领导多个成功的创业公司。当他不工作时，Thomas
+              热衷于冒险和探索，无论是在户外露营，还是在热带水域中浮潜，或者寻找最辣的美食。他还致力于帮助小型企业成长壮大，利用自己的专业知识和人脉支持企业家实现他们的梦想。
+            </p>
+          </div>
+
+          <!-- tab 5 -->
+          <input
+            class="bio__radio-tab"
+            tabindex="1"
+            name="tabs"
+            type="radio"
+            id="tab-five"
+          />
+          <label class="bio__label" for="tab-five">繁體中文</label>
+          <div class="bio__panel" tabindex="1">
+            <p>
+              Thomas Zhang
+              是一位充滿創業精神和技術熱情的成功企業家和技術專家。在科技行業有多年經驗，創辦並成功領導了多家初創公司，利用其對尖端技術的了解，創造出解決複雜問題的有力解決方案。在業餘時間，Thomas
+              喜歡旅行、露營、浮潛、玩視頻遊戲和品嘗辛辣食品。他是一位熱愛大自然的愛好者，已經遊歷了50個州，尋找驚人的景色和當代建築。此外，Thomas
+              在13歲中途退學追求創業夢想，在青少年時期建立和營運了多家企業。20多歲時，他將重點轉向旅行，訪問了世界各地的無數目的地，深刻體會了不同文化和生活方式。儘管教育背景不同尋常，但他在科技行業取得了卓越的成功，利用他敏銳的商業頭腦和廣泛的先進技術知識創辦和領導多個成功的創業公司。當他不工作時，Thomas
+              熱衷於冒險和探索，無論是在戶外露營，還是在熱帶水域中浮潛，或者尋找最辣的美食。他還致力於幫助小型企業成長壯大，利用自己的專業知識和人脈支持企業家實現他們的夢想。
+            </p>
+          </div>
+        </div>
       </div>
-
-      <ul class="cloud" aria-label="Word Cloud">
-        <li data-weight="7">Adventurer</li>
-        <li data-weight="9">Gamer</li>
-        <li data-weight="4">Chef</li>
-        <li data-weight="3">Digital Nomad</li>
-        <li data-weight="7">Traveler</li>
-        <li data-weight="7">Technologist</li>
-        <li data-weight="8">Hacker</li>
-        <li data-weight="5">Photographer</li>
-        <li data-weight="5">Architect</li>
-        <li data-weight="6">Person-of-Disability</li>
-        <li data-weight="9">Conservationist</li>
-        <li data-weight="9">Investor</li>
-        <li data-weight="3">Futurist</li>
-        <li data-weight="3">Foodie</li>
-        <li data-weight="6">Student</li>
-        <li data-weight="3">Developer</li>
-        <li data-weight="3">Designer</li>
-      </ul>
     </main>
   </body>
 </html>
