feat: added contact

--- a/bio.html
+++ b/bio.html
@@ -19,6 +19,7 @@
         <li class="nav-link__home"><a href="/index.html">About Me</a></li>
         <li class="nav-link__resume"><a href="/resume.html">Resume</a></li>
         <li class="nav-link__bio"><a href="/bio.html">Biography</a></li>
+        <li class="nav-link__contact"><a href="/contact.html">Contact</a></li>
       </ul>
     </nav>
     <main>
